# ALEBGK

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
Definitions/: Definitions2D.hpp
InitialConditions/: InitialConditions.hpp
Interpolation/: Interpolation.hpp
MemoryManagement/: MemoryManagement.hpp
Parameters/: CalculateParameters.hpp  Parameters.hpp  ReadParameters.hpp
ParticleManagement/: NeighbourSearch.hpp  ParticleManagement.hpp  VoxelManagement.hpp
SaveParticles/: PrintInformation.hpp  SaveParticles.hpp  WriteToCSV.hpp
Tutorials/2D/: parameters.json
